Translating Reserve an Appointment form and adding employee pictures

--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -214,7 +214,7 @@
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="team wow fadeIn">
 						<div class="thumb">
-							<img src="/static/img/team/1.jpg" alt="">
+							<img src="/static/img/namaste/jennys_team_263x250.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
 							<h3>Jennys</h3>
@@ -230,7 +230,7 @@
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="team wow fadeIn">
 						<div class="thumb">
-							<img src="/static/img/team/2.jpg" alt="">
+							<img src="/static/img/namaste/viviana_namaste_263x250.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
 							<h3>Viviana</h3>
@@ -246,7 +246,7 @@
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="team wow fadeIn">
 						<div class="thumb">
-							<img src="/static/img/team/3.jpg" alt="">
+							<img src="/static/img/namaste/alondra_namaste_263x250.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
 							<h3>Alondra</h3>
@@ -301,14 +301,14 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>Llevo mucho tiempo viniendo aqui y es el mejor sitio. Jennys es una experta en su arte. Se los recomiendo 100%</p>
+						<p>Manos Santas!</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Juana Mancha</span>
+							<span class="author-name">Meddys Candelaria</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -318,14 +318,14 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>No busquen mas que aqui es tu destino. El Vacuslim me tiene al dia.</p>
+						<p>Gracias Bella! Me encantaria que trabajaras en mi porque amo tu trabajo eres excelente me encanta como trabajas. Nos veremos, gracias mil.</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Ricardo Arroyo</span>
+							<span class="author-name">Joma</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -335,14 +335,14 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>Llevo 5 años viniendo aqui. Mejor sitio para masajes.</p>
+						<p>Hola... Me gusta ver tus trabajos y sufro porque no vives aqui..Vivo en Texas eh intentado buscar aqui y no encuentro...</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Victoria de Gloria</span>
+							<span class="author-name">Lilibet Utate</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -352,14 +352,82 @@
 						<div class="quote">
 							<i class="fa fa-quote-left"></i>
 						</div>
-						<p>Me toco Jenny's. Hizo tremendo trabajo, de seguro regreso.</p>
+						<p>De verdad que si estas buscando personas profesionales con buenas manos tienes que ir. Yo recibi masajes relajantes y es como reiniciar la vida.</p>
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Pancho Santos</span>
+							<span class="author-name">Tania Feliciano</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
+						</div>
+					</div>
+				</div>
+				<div class="testimonial-list">
+					<div class="author-comment">
+						<div class="quote">
+							<i class="fa fa-quote-left"></i>
+						</div>
+						<p>Excelente lugar desde que entras sientes paz, las chicas te hacen sentir como en familia, definitivamente tienen q vivir la experiencia.</p>
+					</div>
+					<div class="author-info">
+						<div class="author_thumb">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
+						</div>
+						<div class="author-meta">
+							<span class="author-name">Natasha Zurk</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
+						</div>
+					</div>
+				</div>
+				<div class="testimonial-list">
+					<div class="author-comment">
+						<div class="quote">
+							<i class="fa fa-quote-left"></i>
+						</div>
+						<p>Buenas! Ntp, me siento super bien, quede encantada con el servicio.</p>
+					</div>
+					<div class="author-info">
+						<div class="author_thumb">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
+						</div>
+						<div class="author-meta">
+							<span class="author-name">Anonima</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
+						</div>
+					</div>
+				</div>
+				<div class="testimonial-list">
+					<div class="author-comment">
+						<div class="quote">
+							<i class="fa fa-quote-left"></i>
+						</div>
+						<p>Haga lo que tu crea que sea mejor yo estoy mejor mano tu sacame ese cuerpito lindo.</p>
+					</div>
+					<div class="author-info">
+						<div class="author_thumb">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
+						</div>
+						<div class="author-meta">
+							<span class="author-name">Anonima</span>
+							<span class="designation"><em>Cliente De Namaste</em></span>
+						</div>
+					</div>
+				</div>
+				<div class="testimonial-list">
+					<div class="author-comment">
+						<div class="quote">
+							<i class="fa fa-quote-left"></i>
+						</div>
+						<p>Yo estoy de viaje pero regreso el 23 de abril y preferiblemente despues del mediodia si es posible pq vengo de lejos pero me han dicho que tu eres LA MEJOR!</p>
+					</div>
+					<div class="author-info">
+						<div class="author_thumb">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
+						</div>
+						<div class="author-meta">
+							<span class="author-name">Anonima</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -422,7 +490,8 @@
                     <h2>RESERVA TU CITA</h2>
                 </div>
                 <div class="modal-body">
-					<form action="/" method="POST" data-toggle="validator"><!--<form id="reservation-form" method="post" data-toggle="validator">-->
+					<!--<form id="reservation-form" method="post" data-toggle="validator">-->
+					<form action="/" method="POST" data-toggle="validator">
 						{% csrf_token %}
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
