--- a/namaste/namaste_app/templates/prenatal.html
+++ b/namaste/namaste_app/templates/prenatal.html
@@ -9,7 +9,7 @@
 					<div class="col-md-12">
 						<h1>Masaje Prenatal</h1>
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+							<li class="breadcrumb-item"><a href="{% url 'servicios' %}">Servicios</a></li>
 							<li class="breadcrumb-item active">Masaje Prenatal</li>
 						</ol>
 					</div>
@@ -141,23 +141,25 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2>REQUEST AN APPOINTMENT</h2>
+                    <h2>RESERVA TU CITA</h2>
                 </div>
                 <div class="modal-body">
-					<form id="reservation-form" method="post" data-toggle="validator">
+					<!--<form id="reservation-form" method="post" data-toggle="validator">-->
+					<form action="/" method="POST" data-toggle="validator">
+						{% csrf_token %}
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
-									<label>First Name*</label>
-									<input type="text" id="rfname" class="form-control" name="fname" required data-error="Please enter your first name">
+									<label>Nombre*</label>
+									<input type="text" id="rfname" class="form-control" name="first_name" required data-error="Provee su primer nombre">
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
-									<label>Last Name</label>
-									<input type="text" id="rlname" class="form-control" name="lname" >
+									<label>Apellido</label>
+									<input type="text" id="rlname" class="form-control" name="last_name" >
 								</div>
 							</div>
 						</div>
@@ -166,15 +168,15 @@
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
 									<label>Email*</label>
-									<input type="email" id="remail" class="form-control" name="email" required data-error="Please enter valid email address">
+									<input type="email" id="remail" class="form-control" name="email_address" required data-error="Provee su correo electronico">
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 							
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
-									<label>Phone*</label>
-									<input type="tel" id="rphone" class="form-control" name="phone" required data-error="Please enter your phone number">
+									<label>Teléfono*</label>
+									<input type="tel" id="rphone" class="form-control" name="phone_number" required data-error="Provee su numero de teléfono">
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
@@ -182,7 +184,7 @@
 						</div>
 						
 						<div class="form-group">
-							<label>Address</label>
+							<label>Dirección</label>
 							<input type="text" id="raddress" class="form-control" name="address">
 						</div>
 						
@@ -190,39 +192,37 @@
 							<div class="col-xs-12 col-sm-4">
 								<div class="form-group">
 									<label>Zip Code</label>
-									<input type="text" id="rzipcode" class="form-control" name="zipcode">
+									<input type="text" id="rzipcode" class="form-control" name="zip">
 								</div>
 							</div>
 							
 							<div class="col-xs-12 col-sm-8">
 								<div class="form-group">
-									<label>City</label>
+									<label>Ciudad</label>
 									<input type="text" id="rcity" class="form-control" name="city">
 								</div>
 							</div>
 						</div>
 						
 						<div class="form-group">
-							<label>Service</label>
+							<label>Servicio</label>
 							<select id="rselect-service" class="select-option" name="service">
-								<option value="Herbal Spa">Herbal Spa</option>
-								<option value="Skin Care">Skin Care</option>
-								<option value="Stone Message">Stone Message</option>
-								<option value="Body Message">Body Message</option>
-								<option value="Aromatherapy">Aromatherapy</option>
-								<option value="Hydrotherapy">Hydrotherapy</option>
+								<option value="Masajes">Masajes</option>
+								<option value="Drenajes">Drenajes</option>
+								<option value="Gold Detox">Tratamientos</option>
+								<option value="Depilación">Depilación</option>
 							</select>
 						</div>
 						
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
-									<label>Reservation Date*</label>
+									<label>Fecha de Reservación*</label>
 									<div class="input-group">
 										<div class="input-group-addon">
 											<i class="fa fa-calendar"></i>
 										</div>
-										<input type="text" id="rdate" class="form-control date-pic" name="date" placeholder="mm/dd/yyyy" required data-error="Please select reservation date">
+										<input type="text" id="rdate" class="form-control date-pic" name="date" placeholder="mm/dd/yyyy" required data-error="Escoga fecha de reservación">
 									</div><!-- /.input group -->
 									<div class="help-block with-errors"></div>
 								</div>
@@ -231,12 +231,12 @@
 							<div class="col-xs-12 col-sm-6">
 								<div class="bootstrap-timepicker">
 									<div class="form-group">
-										<label>Time picker*</label>
+										<label>Hora*</label>
 										<div class="input-group">
 											<div class="input-group-addon">
 												<i class="fa fa-clock-o"></i>
 											</div>
-											<input type="text" id="rtime" name="time" class="form-control timepicker" required data-error="Please select reservation time">
+											<input type="text" id="rtime" name="time" class="form-control timepicker" required data-error="Escoga hora de reservación">
 										</div><!-- /.input group -->
 										<div class="help-block with-errors"></div>
 									</div><!-- /.form group -->
