Front end updates and initial backend work

--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -128,7 +128,7 @@
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="team wow fadeIn">
 						<div class="thumb">
-							<img src="/static/img/team/4.jpg" alt="">
+							<img src="/static/img/namaste/namaste_logo_circle_263x250.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
 							<h3>Valeria</h3>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="modal-body">
 					<!--<form id="reservation-form" method="post" data-toggle="validator">-->
-					<form action="/" method="POST" data-toggle="validator">
+					<form action="/sobre-nosotros/" method="POST" data-toggle="validator">
 						{% csrf_token %}
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
