--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -169,8 +169,8 @@
 	<script src="/static/js/bootstrap-timepicker.min.js"></script>
 	<script src="/static/js/bootstrap-datepicker.js"></script>
 	<script src="/static/js/chosen.jquery.js"></script>
-	<script src="/static/mail/js/form-validator.min.js"></script>
-	<script src="/static/mail/js/contact-form-script.js"></script>
+	<!-- <script src="/static/mail/js/form-validator.min.js"></script> -->
+	<!-- <script src="/static/mail/js/contact-form-script.js"></script> -->
     <script src="/static/js/script.js"></script>
 	
 </body>
