--- a/namaste/namaste_app/static/style.css
+++ b/namaste/namaste_app/static/style.css
@@ -306,6 +306,30 @@ p {
     outline: 0;
     box-shadow: none; 
 }
+
+.button-container {
+	
+}
+
+@media (max-width: 767px) { /* Adjust this value based on your mobile breakpoint */
+    .button-container {
+        text-align: right;
+		margin-left: 100px;
+    }
+}
+
+@media (max-width: 767px) { /* Common mobile breakpoint */
+    .mobile-center {
+        text-align: center; /* Center the text */
+        padding-left: 0; /* Remove padding if any exists that might offset the centering */
+        padding-right: 0; /* Same as above */
+    }
+    .mobile-center .btn {
+        margin: 0 auto; /* Center-align the button */
+        width: auto; /* Optional: Adjust width as needed */
+    }
+}
+
 section{
 	width:100%;
 	float:left;
@@ -360,6 +384,17 @@ section{
     display: block;
     margin: 0 auto;
     max-width: 750px;
+}
+
+.section-title img:first-of-type {
+    /* CSS rules here */
+    max-width: 100%;    /* Makes the image responsive */
+    height: auto;       /* Maintains aspect ratio */
+    border: 3px solid #ddd; /* Adds a light grey border */
+    border-radius: 8px; /* Rounds the corners */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Adds a subtle shadow */
+    margin-top: 20px;   /* Adds space above the image */
+    margin-bottom: 20px; /* Adds space below the image */
 }
 
 /*======================================== Header Design ========================================*/
