--- a/namaste/namaste_app/templates/chinese_cups.html
+++ b/namaste/namaste_app/templates/chinese_cups.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="modal-body">
 					<!--<form id="reservation-form" method="post" data-toggle="validator">-->
-					<form action="/" method="POST" data-toggle="validator">
+					<form action="/copas-chinas/" method="POST" data-toggle="validator">
 						{% csrf_token %}
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
