--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -45,6 +45,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
+						<img src="/static/img/namaste/todo_el_equipo_namaste_900x1000.jpg" id="equipo-namaste">
+						<br>
 						<h2><span>Bienvenidos a Namasté</span></h2>
 						<p>Donde el arte del masaje se fusiona con la pasión por el bienestar físico y mental de cada cliente. </p>
 						<p>Permítanos llevarte en un recorrido a través de nuestra historia, donde cada palabra cuenta una etapa de transformación, superación y amor.</p>
@@ -109,7 +111,7 @@
 				</div>
 			
 			<div class="row">
-				<div class="col-md-12 text-center">
+				<div class="col-md-12 text-center button-container">
 					<a href="{% url 'servicios' %}" class="btn btn-primary">Mas Servicios</a>
 				</div>
 			</div>
@@ -128,7 +130,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6">
+				<div class="col-sm-12 col-md-6 mobile-center">
 					<div class="text-block wow fadeIn">
                         <p>Disfruta de Nuestros Tratamientos</p>
 						<h2>REVITALIZA TU MENTE, CUERPO Y ESPÍRITU</h2>
@@ -192,7 +194,7 @@
 				</div>
 			
 			<div class="row">
-				<div class="col-md-12 text-center">
+				<div class="col-md-12 text-center button-container">
 					<a href="{% url 'servicios' %}" class="btn btn-primary">Mas Servicios</a>
 				</div>
 			</div>
@@ -262,7 +264,7 @@
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="team wow fadeIn">
 						<div class="thumb">
-							<img src="/static/img/team/4.jpg" alt="">
+							<img src="/static/img/namaste/namaste_logo_circle_263x250.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
 							<h3>Valeria</h3>
@@ -290,7 +292,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Clientes Contentos</span></h2>
+						<h2><span>Lo que dicen de nosotros</span></h2>
 					</div>
 				</div>
 			</div>
@@ -308,7 +310,7 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Meddys Candelaria</span>
+							<span class="author-name">Meddys</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -342,7 +344,7 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Lilibet Utate</span>
+							<span class="author-name">Lilibet</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -359,7 +361,7 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Tania Feliciano</span>
+							<span class="author-name">Tania</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -376,7 +378,7 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Natasha Zurk</span>
+							<span class="author-name">Natasha</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -393,7 +395,6 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Anonima</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -410,7 +411,6 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Anonima</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -427,7 +427,6 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Anonima</span>
 							<span class="designation"><em>Cliente De Namaste</em></span>
 						</div>
 					</div>
@@ -441,7 +440,7 @@
 	<section class="section-spacing">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-md-6">
+				<div class="col-md-6 mobile-center">
 					<div class="appoinment-text wow fadeIn">
 						<h2>Reservaciones</h2>
 						<p>Reserva tu cita hoy y comienza tu camino hacia una vida más saludable y armoniosa. </p>
@@ -491,7 +490,7 @@
                 </div>
                 <div class="modal-body">
 					<!--<form id="reservation-form" method="post" data-toggle="validator">-->
-					<form action="/" method="POST" data-toggle="validator">
+					<form action="/" method="POST">
 						{% csrf_token %}
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
@@ -595,7 +594,7 @@
 							<input value="Submit" name="submit" class="btn btn-primary" type="submit">
 						</div>
 						
-						<div id="msgSubmitRes" class="h3 text-center hidden"></div>
+						<!-- <div id="msgSubmitRes" class="h3 text-center hidden"></div> -->
 						
 					</form>
                 </div>
