--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -310,8 +310,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Meddys</span>
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em>Cliente De Namaste</em></span> -->
 						</div>
 					</div>
 				</div>
@@ -327,8 +327,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Joma</span>
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em></em></span> -->
 						</div>
 					</div>
 				</div>
@@ -344,8 +344,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Lilibet</span>
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em>Cliente De Namaste</em></span> -->
 						</div>
 					</div>
 				</div>
@@ -361,8 +361,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Tania</span>
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em>Cliente De Namaste</em></span> -->
 						</div>
 					</div>
 				</div>
@@ -378,8 +378,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="author-name">Natasha</span>
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em>Cliente De Namaste</em></span> -->
 						</div>
 					</div>
 				</div>
@@ -395,7 +395,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em>Cliente De Namaste</em></span> -->
 						</div>
 					</div>
 				</div>
@@ -411,7 +412,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em>Cliente De Namaste</em></span> -->
 						</div>
 					</div>
 				</div>
@@ -427,7 +429,8 @@
 							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
-							<span class="designation"><em>Cliente De Namaste</em></span>
+							<span class="author-name">Cliente De Namaste</span>
+							<!-- <span class="designation"><em>Cliente De Namaste</em></span> -->
 						</div>
 					</div>
 				</div>
