Finishing manager portal

--- a/namaste/namaste_app/templates/admin_base.html
+++ b/namaste/namaste_app/templates/admin_base.html
@@ -70,7 +70,7 @@
 						<a class="nav-link" href="{% url 'mensajes' %}">Mensajes</a>					
 					</li>
                     <li class="nav-item">
-						<a class="nav-link" href="{% url 'waiver' %}">Relevo De Responsabilidad</a>					
+						<a class="nav-link" href="{% url 'relevo' %}">Relevo De Responsabilidad</a>					
 					</li>
                     <li class="nav-item btn-appointment">
 						<a class="nav-link" href="{% url 'logout' %}">Log Out</a>					
