--- a/namaste/namaste_app/templates/dashboard.html
+++ b/namaste/namaste_app/templates/dashboard.html
@@ -78,12 +78,12 @@
             <div class="col-md-4">
                 <div class="service-item wow fadeIn">
                     <div class="thumb">
-                        <a href="{% url 'waiver' %}"><img src="/static/img/namaste/form.jpg" alt=""></a>
+                        <a href="{% url 'relevo' %}"><img src="/static/img/namaste/form.jpg" alt=""></a>
                     </div>
                     <div class="service-info text-center">
-                        <h3><a href="{% url 'waiver' %}">Relevo De Responsabilidad</a></h3>
+                        <h3><a href="{% url 'relevo' %}">Relevo De Responsabilidad</a></h3>
                         <p>Formulario que el cliente debe de llenar antes de ser atendido.</p>
-                        <a href="{% url 'waiver' %}" class="btn btn-default">Entrar</a>
+                        <a href="{% url 'relevo' %}" class="btn btn-default">Entrar</a>
                     </div>
                 </div>
             </div>
@@ -98,6 +98,18 @@
                         <h3><a href="{% url 'buscar_cliente' %}">Buscar Clientes</a></h3>
                         <p>Busque clientes por su email o numero de telefono.</p>
                         <a href="{% url 'buscar_cliente' %}" class="btn btn-default">Entrar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="service-item wow fadeIn">
+                    <div class="thumb">
+                        <a href="{% url 'register' %}"><img src="/static/img/namaste/employees_400x267.jpg" alt=""></a>
+                    </div>
+                    <div class="service-info text-center">
+                        <h3><a href="{% url 'register' %}">Añadir Empleados</a></h3>
+                        <p>Crear cuenta para empleados</p>
+                        <a href="{% url 'register' %}" class="btn btn-default">Entrar</a>
                     </div>
                 </div>
             </div>
