--- a/namaste/namaste_app/templates/login.html
+++ b/namaste/namaste_app/templates/login.html
@@ -163,6 +163,72 @@
             </div>
         </div>
     </section>
+    <footer id="footer">
+		<div class="footer-top">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3">
+						<div class="footer-widget">
+                            <img src="/static/img/namaste/footer-logo.jpg" alt="Logo">
+                            <br><br>
+							<p>Disfruta de una experiencia de masaje única y revitalizante que te dejará completamente renovado.</p>
+							
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="footer-widget">
+							<h3>QUICK LINKS</h3>
+							<ul>
+                                
+                                <li><a href="{% url 'login' %}">Portal de Empleados</a></li>
+								<li><a href="{% url 'sobre-nosotros' %}">Sobre Nosotros</a></li>
+								<li><a href="{% url 'servicios' %}">Servicios</a></li>
+								<li><a href="{% url 'contacto' %}">Contactanos</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="footer-widget">
+							<h3>CONTACTANOS</h3>
+							<ul>
+								<li><i class="fa fa-send" aria-hidden="true"></i> Ave. Nativo Alers Aguada, Puerto Rico, 00602</li>
+								<li><i class="fa fa-phone" aria-hidden="true"></i> +1939-475-7743</li>
+								<li><i class="fa fa-envelope-o" aria-hidden="true"></i> contactonamastepr@gmail.com</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="footer-widget">
+							<h3>Horas de Operaciones</h3>
+							<ul class="bussiness-hour">
+								<li>Lunes-Viernes: <span class="pull-right">9am - 4pm.</span></li>
+								<li>Sabado: <span class="pull-right">09am - 12pm.</span></li>
+								<li>Domingo: <span class="pull-right">Closed.</span></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer-bottom">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-6">
+						<div class="copyright">
+							<p>Copyright &copy; 2023. All rights reserved.</p>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6">
+						<ul class="social-icons pull-right">
+							<li><a href="https://www.facebook.com/NamastebyJ" target="_blank"><i class="fab fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/namastebyjennys/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- end footer -->
 <!-- end banner -->
     <!-- <h2 id="login">Log In</h2>
     <form method="POST" action="{% url 'login' %}">
