--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -99,7 +99,7 @@
 							<h3>QUICK LINKS</h3>
 							<ul>
                                 
-                                <li><a href="#">Politica de Privacidad</a></li>
+                                <li><a href="{% url 'login' %}">Portal de Empleados</a></li>
 								<li><a href="{% url 'sobre-nosotros' %}">Sobre Nosotros</a></li>
 								<li><a href="{% url 'servicios' %}">Servicios</a></li>
 								<li><a href="{% url 'contacto' %}">Contactanos</a></li>
