Adding treatment type text options

--- a/namaste/namaste_app/templates/informacion_de_cliente.html
+++ b/namaste/namaste_app/templates/informacion_de_cliente.html
@@ -205,8 +205,26 @@ button {
                             <div class="col-xs-12 col-sm-12">
                                 <div class="form-group">
                                     <label>Tratamiento*</label>
-                                    <input type="text" id="remail" class="form-control" name="treatment" required data-error="Provee tratamiento">
-                                    <div class="help-block with-errors"></div>
+                                    <select id="rselect-service" class="select-option" name="treatment">
+                                        <option value="Masaje Sueco">Masaje Sueco</option>
+                                        <option value="Post Operatorio">Post Operatorio</option>
+                                        <option value="Masaje Prenatal">Masaje Prenatal</option>
+                                        <option value="Masaje Profundo">Masaje Profundo</option>
+                                        <option value="Gold Detox">Gold Detox</option>
+                                        <option value="Vacuslim-48">Vacuslim-48</option>
+                                        <option value="Depilacion">Depilacion</option>
+                                        <option value="Maderoterapia">Maderoterapia</option>
+                                        <option value="Metaloterapia">Metaloterapia</option>
+                                        <option value="Drenaje Linfatico">Drenaje Linfatico</option>
+                                        <option value="Quiromasaje">Quiromasaje</option>
+                                        <option value="Copas Chinas">Copas Chinas</option>
+                                        <option value="Pistola de Masaje">Pistola de Masaje</option>
+                                        <option value="Maderoterapia Facial">Maderoterapia Facial</option>
+                                        <option value="Lipolaser">Lipolaser</option>
+                                        <option value="Vacumterapia">Vacumterapia</option>
+                                        <option value="LeBody">LeBody</option>
+                                        <option value="Otro">Otro</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
