--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -36,7 +36,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700,800,900" rel="stylesheet">
 	<!-- Main CSS -->
 	<link href="/static/style.css" rel="stylesheet">
-	
+	<!--JQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -73,7 +74,7 @@
 						<a class="nav-link" href="{% url 'contacto' %}">CONTACTO</a>					
 					</li>
 					<li class="nav-item btn-appointment">
-						<a class="nav-link" href="#" data-toggle="modal" data-target="#appointment">RESERVA TU CITA</a>					
+						<a class="nav-link" href="{% url 'booking' %}">RESERVA TU CITA</a>					
 					</li>
 				</ul>
 			</div>
@@ -169,8 +170,6 @@
 	<script src="/static/js/bootstrap-timepicker.min.js"></script>
 	<script src="/static/js/bootstrap-datepicker.js"></script>
 	<script src="/static/js/chosen.jquery.js"></script>
-	<!-- <script src="/static/mail/js/form-validator.min.js"></script> -->
-	<!-- <script src="/static/mail/js/contact-form-script.js"></script> -->
     <script src="/static/js/script.js"></script>
 	
 </body>
